# Kilntainers

./: .coveragerc  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  checks.sh  conftest.py  hooks_mcp.yaml  pyproject.toml
.github/workflows/: build_and_test.yml  coverage.yml  debug_detector.yml  format_and_lint.yml  test_count.yml
agents/: mcp.json  python_test_guide.md
specs/: decisions.md  functional_spec.md  implementation_plan.md  phase_instructions.md  planning_qa.md  project_overview.md  spec_queue.md
specs/architecture/: architecture_summary.md  backend_abstraction.md  cli_and_startup.md  connection_lifecycle.md  docker_backend.md  e2b_backend.md  error_handling.md  mcp_server.md  modal_backend.md  project_structure.md  wasm_backend.md
specs/phase_plans/: phase10_e2b.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md
specs/projects/lazy_load_container/: plan.md
specs/tasks/: backend_args.md
src/kilntainers/: __init__.py  cli.py  config.py  errors.py  server.py  test_cli.py  test_cli_integration.py  test_config.py  test_e2e_mcp.py  test_errors.py  test_http_lifecycle.py  test_lifecycle_integration.py  test_server.py
src/kilntainers/backends/: __init__.py  base.py  docker.py  e2b.py  modal.py  test___init__.py  test_base.py  test_docker.py  test_docker_integration.py  test_e2b.py  test_e2b_e2e.py  test_linux_container_integration.py  test_modal.py  test_modal_integration.py  test_utils.py  test_wasm.py  test_wasm_go_busybox.py  wasm.py
src/kilntainers/backends/wasm_data/: __init__.py  busybox.wasm
